<resources>
    <string name="app_name">Aston_intensiv_6</string>
    <string name="details_name_label">Name:</string>
    <string name="details_surname_label">Surname:</string>
    <string name="details_phone_label">Phone:</string>
    <string name="details_button_edit_label">Edit</string>
    <string name="edit_button_save_changes_label">Save changes</string>
    <string name="edit_hint_name">Contact\'s name</string>
    <string name="edit_hint_surname">Contact\'s surname</string>
    <string name="edit_hint_phone_number">Phone number</string>
    <string name="edit_is_blank_error_message">You have to fill info</string>
    <string name="main_id_label">id:</string>
    <string name="main_description_photo">Contact photo</string>
    <string name="details_description_contact_image">Contact image</string>
    <string name="details_id_label">Id:</string>
</resources>