<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/edit_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/edit_margin_horizontal"
            android:layout_marginTop="@dimen/edit_upper_margin_top"
            android:text="@string/details_name_label"
            android:textColor="@color/main_gray_text"
            android:textSize="@dimen/edit_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/details_margin_horizontal"
            android:layout_marginTop="@dimen/edit_middle_margin_top"
            android:hint="@string/edit_hint_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="@dimen/edit_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_name_label" />

        <TextView
            android:id="@+id/edit_surname_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/edit_margin_horizontal"
            android:layout_marginTop="@dimen/edit_upper_margin_top"
            android:text="@string/details_surname_label"
            android:textColor="@color/main_gray_text"
            android:textSize="@dimen/edit_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_name" />

        <EditText
            android:id="@+id/edit_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/edit_margin_horizontal"
            android:layout_marginTop="@dimen/edit_middle_margin_top"
            android:hint="@string/edit_hint_surname"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="@dimen/edit_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_surname_label" />

        <TextView
            android:id="@+id/edit_phone_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/edit_margin_horizontal"
            android:layout_marginTop="@dimen/edit_upper_margin_top"
            android:text="@string/details_phone_label"
            android:textColor="@color/main_gray_text"
            android:textSize="@dimen/edit_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_surname" />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/edit_margin_horizontal"
            android:layout_marginTop="@dimen/edit_middle_margin_top"
            android:hint="@string/edit_hint_phone_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="@dimen/edit_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_phone_label" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/edit_button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_margin_horizontal"
            android:layout_marginTop="@dimen/edit_upper_margin_top"
            android:background="@drawable/gray_button_ripple"
            android:paddingHorizontal="@dimen/edit_button_padding_horizontal"
            android:text="@string/edit_button_save_changes_label"
            android:textSize="@dimen/edit_button_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_phone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
