<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/details_contact_image"
            android:layout_width="@dimen/details_image_size"
            android:layout_height="@dimen/details_image_size"
            android:layout_marginStart="@dimen/details_margin_horizontal"
            android:layout_marginTop="@dimen/details_upper_margin_top"
            android:contentDescription="@string/details_description_contact_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/details_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/details_margin_horizontal"
            android:layout_marginTop="@dimen/details_upper_margin_top"
            android:text="@string/details_name_label"
            android:textColor="@color/main_gray_text"
            android:textSize="@dimen/details_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_contact_image" />

        <TextView
            android:id="@+id/details_name_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/details_margin_horizontal"
            android:layout_marginTop="@dimen/details_middle_margin_top"
            android:textColor="@color/black"
            android:textSize="@dimen/details_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_name_label"
            tools:text="Иван" />

        <TextView
            android:id="@+id/details_surname_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/details_margin_horizontal"
            android:layout_marginTop="@dimen/details_upper_margin_top"
            android:text="@string/details_surname_label"
            android:textColor="@color/main_gray_text"
            android:textSize="@dimen/details_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_name_content" />

        <TextView
            android:id="@+id/details_surname_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/details_margin_horizontal"
            android:layout_marginTop="@dimen/details_middle_margin_top"
            android:textColor="@color/black"
            android:textSize="@dimen/details_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_surname_label"
            tools:text="Иванов" />

        <TextView
            android:id="@+id/details_phone_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/details_margin_horizontal"
            android:layout_marginTop="@dimen/details_upper_margin_top"
            android:text="@string/details_phone_label"
            android:textColor="@color/main_gray_text"
            android:textSize="@dimen/details_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_surname_content" />

        <TextView
            android:id="@+id/details_phone_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/details_margin_horizontal"
            android:layout_marginTop="@dimen/details_middle_margin_top"
            android:textColor="@color/black"
            android:textSize="@dimen/details_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_phone_label"
            tools:text="84951234455" />

        <TextView
            android:id="@+id/details_id_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/details_margin_horizontal"
            android:layout_marginTop="@dimen/details_upper_margin_top"
            android:text="@string/details_id_label"
            android:textColor="@color/main_gray_text"
            android:textSize="@dimen/details_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_phone_content" />

        <TextView
            android:id="@+id/details_id_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/details_margin_horizontal"
            android:layout_marginTop="@dimen/details_middle_margin_top"
            android:textColor="@color/black"
            android:textSize="@dimen/details_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_id_label"
            tools:text="56" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/details_button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/details_margin_horizontal"
            android:layout_marginTop="@dimen/details_upper_margin_top"
            android:background="@drawable/gray_button_ripple"
            android:paddingHorizontal="@dimen/details_button_padding_horizontal"
            android:text="@string/details_button_edit_label"
            android:textSize="@dimen/details_button_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details_id_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
